add_library(libday02 day02.cpp day02.hpp)
set_target_properties(libday02 PROPERTIES CXX_EXTENSIONS OFF)
target_compile_features(libday02 PUBLIC cxx_std_20)
target_compile_options(libday02 PRIVATE ${SANITIZER_COMPILE_OPTIONS} ${DEFAULT_COMPILER_OPTIONS} ${DEFAULT_COMPILER_WARNINGS})
target_link_options(libday02 PRIVATE ${SANITIZER_LINK_OPTIONS})
target_link_libraries(libday02 PRIVATE ${SANITIZER_LINK_LIBRARIES} libaoc)

add_executable(day02 main.cpp)
set_target_properties(day02 PROPERTIES CXX_EXTENSIONS OFF)
target_compile_features(day02 PUBLIC cxx_std_20)
target_compile_options(day02 PRIVATE ${SANITIZER_COMPILE_OPTIONS} ${DEFAULT_COMPILER_OPTIONS} ${DEFAULT_COMPILER_WARNINGS})
target_link_options(day02 PRIVATE ${SANITIZER_LINK_OPTIONS})
target_link_libraries(day02 PRIVATE ${SANITIZER_LINK_LIBRARIES} libaoc libday02)
