add_library(libday03 day03.cpp day03.hpp)
set_target_properties(libday03 PROPERTIES CXX_EXTENSIONS OFF)
target_compile_features(libday03 PUBLIC cxx_std_20)
target_compile_options(libday03 PRIVATE ${SANITIZER_COMPILE_OPTIONS} ${DEFAULT_COMPILER_OPTIONS} ${DEFAULT_COMPILER_WARNINGS})
target_link_options(libday03 PRIVATE ${SANITIZER_LINK_OPTIONS})
target_link_libraries(libday03 PRIVATE ${SANITIZER_LINK_LIBRARIES} libaoc)

add_executable(day03 main.cpp)
set_target_properties(day03 PROPERTIES CXX_EXTENSIONS OFF)
target_compile_features(day03 PUBLIC cxx_std_20)
target_compile_options(day03 PRIVATE ${SANITIZER_COMPILE_OPTIONS} ${DEFAULT_COMPILER_OPTIONS} ${DEFAULT_COMPILER_WARNINGS})
target_link_options(day03 PRIVATE ${SANITIZER_LINK_OPTIONS})
target_link_libraries(day03 PRIVATE ${SANITIZER_LINK_LIBRARIES} libaoc libday03)
