add_library(libday09 day09.cpp day09.hpp)
set_target_properties(libday09 PROPERTIES CXX_EXTENSIONS OFF)
target_compile_features(libday09 PUBLIC cxx_std_20)
target_compile_options(libday09 PRIVATE ${SANITIZER_COMPILE_OPTIONS} ${DEFAULT_COMPILER_OPTIONS} ${DEFAULT_COMPILER_WARNINGS})
target_link_options(libday09 PRIVATE ${SANITIZER_LINK_OPTIONS})
target_link_libraries(libday09 PRIVATE ${SANITIZER_LINK_LIBRARIES} libaoc)

add_executable(day09 main.cpp)
set_target_properties(day09 PROPERTIES CXX_EXTENSIONS OFF)
target_compile_features(day09 PUBLIC cxx_std_20)
target_compile_options(day09 PRIVATE ${SANITIZER_COMPILE_OPTIONS} ${DEFAULT_COMPILER_OPTIONS} ${DEFAULT_COMPILER_WARNINGS})
target_link_options(day09 PRIVATE ${SANITIZER_LINK_OPTIONS})
target_link_libraries(day09 PRIVATE ${SANITIZER_LINK_LIBRARIES} libaoc libday09)
