add_library(libDAYXX DAYXX.cpp DAYXX.hpp)
set_target_properties(libDAYXX PROPERTIES CXX_EXTENSIONS OFF)
target_compile_features(libDAYXX PUBLIC cxx_std_20)
target_compile_options(libDAYXX PRIVATE ${SANITIZER_COMPILE_OPTIONS} ${DEFAULT_COMPILER_OPTIONS} ${DEFAULT_COMPILER_WARNINGS})
target_link_options(libDAYXX PRIVATE ${SANITIZER_LINK_OPTIONS})
target_link_libraries(libDAYXX PRIVATE ${SANITIZER_LINK_LIBRARIES} libaoc)

add_executable(DAYXX main.cpp)
set_target_properties(DAYXX PROPERTIES CXX_EXTENSIONS OFF)
target_compile_features(DAYXX PUBLIC cxx_std_20)
target_compile_options(DAYXX PRIVATE ${SANITIZER_COMPILE_OPTIONS} ${DEFAULT_COMPILER_OPTIONS} ${DEFAULT_COMPILER_WARNINGS})
target_link_options(DAYXX PRIVATE ${SANITIZER_LINK_OPTIONS})
target_link_libraries(DAYXX PRIVATE ${SANITIZER_LINK_LIBRARIES} libaoc libDAYXX)
